@@ -1,5 +1,7 @@
 Changelog for getResources.
 
+- [#25] Add new operators to tvFilters
+- [#37] Consider default values with tvFilters
 - [#57] Fix tpl overrides and improve order
 
 getResources 1.4.1-pl (December 8, 2011)
